# todos/grpcHandler.go
@@ -17,9 +17,15 @@ func GetServiceServer() todo.TodoServiceServer {
 type todoServiceServer struct {
 }
 
+func (s *todoServiceServer) CompleteTodo(ctx context.Context, req *todo.GetTodoRequest) (*todo.TodoEntity, error) {
+	item, err := completeTodoItem(req.Id)
+	entity := todo.TodoEntity{Data: &item, Links: GenerateEntityHateoas(item.Id).Links}
+	return &entity, err
+}
+
 func (s *todoServiceServer) CreateTodo(ctx context.Context, req *todo.CreateTodoRequest) (*todo.TodoEntity, error) {
 	item, err := createTodoItem(req.Item)
-	entity := makeTodoEntity(item)
+	entity := todo.TodoEntity{Data: &item, Links: GenerateEntityHateoas(item.Id).Links}
 	return &entity, err
 }
 
@@ -36,7 +42,7 @@ func (s *todoServiceServer) UpdateTodo(ctx context.Context, req *todo.UpdateTodo
 	if err != nil {
 		return nil, status.Errorf(codes.NotFound, "Could not update entity: %s", err)
 	}
-	entity := makeTodoEntity(item)
+	entity := todo.TodoEntity{Data: &item, Links: GenerateEntityHateoas(item.Id).Links}
 	return &entity, nil
 }
 
@@ -45,11 +51,12 @@ func (s *todoServiceServer) GetTodo(ctx context.Context, req *todo.GetTodoReques
 	if err != nil {
 		return nil, status.Errorf(codes.NotFound, "Todo not Found: %s", err)
 	}
-	entity := makeTodoEntity(item)
+	entity := todo.TodoEntity{Data: &item, Links: GenerateEntityHateoas(item.Id).Links}
 	return &entity, nil
 }
 
 func (s *todoServiceServer) ListTodo(ctx context.Context, req *todo.ListTodoRequest) (*todo.TodoCollection, error) {
+
 	opts := GetListOptionsFromRequest(req)
 	items, dbMeta, err := listTodoItems(opts)
 	if err != nil {
@@ -57,19 +64,8 @@ func (s *todoServiceServer) ListTodo(ctx context.Context, req *todo.ListTodoRequ
 	}
 	var collection []*todo.TodoEntity
 	for _, item := range items {
-		entity := makeTodoEntity(item)
+		entity := todo.TodoEntity{Data: &item, Links: GenerateEntityHateoas(item.Id).Links}
 		collection = append(collection, &entity)
 	}
 	return &todo.TodoCollection{Data: collection, Links: GenerateCollectionHATEOAS(dbMeta).Links}, nil
-}
-
-// erzeuge aus einem db todo item eine todoEntity
-func makeTodoEntity(item todo.Todo) todo.TodoEntity {
-	var h Hateoas
-	h.AddLink("self", "application/json", "http://localhost:8080/todos/"+item.Id, todo.Link_GET)
-	h.AddLink("delete", "application/json", "http://localhost:8080/todos/"+item.Id, todo.Link_DELETE)
-	h.AddLink("update", "application/json", "http://localhost:8080/todos/"+item.Id, todo.Link_PATCH)
-	h.AddLink("parent", "application/json", "http://localhost:8080/todos", todo.Link_GET)
-	entity := todo.TodoEntity{Data: &item, Links: h.Links}
-	return entity
 }
